# novus

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  codecov.yml  flake.nix
apps/: CMakeLists.txt  app.cpp  rang_include.hpp
apps/asmdiag/: main.cpp
apps/eval/: main.cpp
apps/lexdiag/: main.cpp
apps/lexerdiag/: main.cpp
apps/novc/: compiler.cpp  compiler.hpp  deps.cpp  deps.hpp  main.cpp  utilities.cpp  utilities.hpp
apps/novdiag-asm/: main.cpp
apps/novdiag-lex/: main.cpp
apps/novdiag-parse/: get_color.hpp  main.cpp
apps/novdiag-prog/: get_expr_color.hpp  main.cpp
apps/nove/: main.cpp
apps/novrt/: install.cpp  install.hpp  main.cpp  metacmd.hpp
apps/novrt/win32/: env.cpp  env.hpp  err.cpp  err.hpp  install.cpp  install.hpp  reg.cpp  reg.hpp  regkey.cpp  regkey.hpp  regval.cpp  regval.hpp  utilities.cpp  utilities.hpp
apps/parsediag/: get_color.hpp  main.cpp
apps/parsediag/visitors/: get_color.hpp
apps/progdiag/: get_expr_color.hpp  main.cpp
apps/repl/: main.cpp
apps/scripts/: novus-install.bat  novus-uninstall.bat
fuzz/: CMakeLists.txt  fuzz_lex.cpp  fuzz_parse.cpp
src/: CMakeLists.txt
src/backend/: builder.cpp  generator.cpp
src/frontend/: analysis.cpp  diag.cpp  diag_defs.cpp  diag_severity.cpp  output.cpp  source.cpp  source_table.cpp
src/input/: char_escape.cpp  info.cpp  search_paths.cpp  source_span.cpp  span.cpp  textpos.cpp
src/lex/: char_escape.cpp  char_escape.hpp  error.cpp  keyword.cpp  lexer.cpp  source_span.cpp  sourcespan.cpp  token.cpp  token_cat.cpp  token_kind.cpp  token_payload.cpp  token_payload_lit_char.cpp  token_payload_lit_string.cpp  token_type.cpp  tokentype.cpp  utilities.cpp
src/novasm/: assembler.cpp  assembly.cpp  disassembler.cpp  executable.cpp  intrinsics.hpp  op_code.cpp  pcall_code.cpp  serialization.cpp
src/opt/: call_inline.cpp  const_elimination.cpp  inline_calls.cpp  optimize.cpp  precompute_literals.cpp  treeshake.cpp
src/parse/: argument_list_decl.cpp  error.cpp  node.cpp  node_comment.cpp  node_error.cpp  node_expr_anon_func.cpp  node_expr_binary.cpp  node_expr_call.cpp  node_expr_conditional.cpp  node_expr_const.cpp  node_expr_const_decl.cpp  node_expr_field.cpp  node_expr_group.cpp  node_expr_id.cpp  node_expr_index.cpp  node_expr_intrinsic.cpp  node_expr_is.cpp  node_expr_lit.cpp  node_expr_paren.cpp  node_expr_switch.cpp  node_expr_switch_else.cpp  node_expr_switch_if.cpp  node_expr_unary.cpp  node_kind.cpp  node_stmt_enum_decl.cpp  node_stmt_exec.cpp  node_stmt_func_decl.cpp  node_stmt_import.cpp  node_stmt_print.cpp  node_stmt_struct_decl.cpp  node_stmt_union_decl.cpp  node_type.cpp  node_visitor_deep.cpp  node_visitor_recursive.cpp  op_precedence.cpp  op_precedence.hpp  parser.cpp  ret_type_spec.cpp  type.cpp  type_param_list.cpp  (+3 more)
src/prog/: copy.cpp  intrinsics.cpp  operator.cpp  program.cpp
src/vm/: assembly.cpp  exec_state.cpp  executor.cpp  file.cpp  op_code.cpp  opcode.cpp  pcall_code.cpp  platform_interface.cpp  program.cpp  result_code.cpp  vm.cpp
tests/: CMakeLists.txt  main.cpp
tests/backend/: assembly_output.cpp  assembly_output.hpp  call_dyn_expr_test.cpp  call_expr_test.cpp  call_self_expr_test.cpp  constants_test.cpp  enum_test.cpp  group_expr_test.cpp  helpers.hpp  lazy_calls_test.cpp  literals_test.cpp  struct_test.cpp  switch_expr_test.cpp  tail_calls_test.cpp  union_test.cpp  user_struct_test.cpp  user_union_test.cpp
tests/frontend/: analysis_test.cpp  anon_func_test.cpp  declare_user_funcs_test.cpp  declare_user_types_test.cpp  define_exec_stmts_test.cpp  define_user_funcs_test.cpp  define_user_types_test.cpp  get_binary_expr_test.cpp  get_call_dyn_expr_test.cpp  get_call_expr_test.cpp  get_call_self_expr_test.cpp  get_conditional_expr_test.cpp  get_const_expr_test.cpp  get_enum_expr_test.cpp  get_field_expr_test.cpp  get_group_expr_test.cpp  get_index_expr_test.cpp  get_intrinsic_expr_test.cpp  get_is_expr_test.cpp  get_lit_expr_test.cpp  get_meta_intrinsic_test.cpp  get_paren_expr_test.cpp  get_switch_expr_test.cpp  get_unary_expr_test.cpp  helpers.hpp  import_test.cpp  opt_args_test.cpp  overload_test.cpp  parse_diags_test.cpp  reflect_test.cpp  source_location_test.cpp  source_test.cpp  static_int_test.cpp  staticint_test.cpp  typeinfer_user_funcs_test.cpp  user_func_templates_test.cpp  user_type_templates_test.cpp
tests/input/: char_escape_test.cpp  info_test.cpp  sourcespan_test.cpp  span_test.cpp
tests/lex/: category_test.cpp  comment_test.cpp  helpers.hpp  identifier_test.cpp  iterator_test.cpp  keyword_test.cpp  lexer.cpp  litbool_test.cpp  litchar_test.cpp  litfloat_test.cpp  litint_test.cpp  litlong_test.cpp  litstr_test.cpp  operators_test.cpp  seperators_test.cpp  sourcespan_test.cpp  staticint_test.cpp  utilities_test.cpp
tests/novasm/: helpers.hpp  serialization_test.cpp
tests/opt/: call_inline_test.cpp  const_elimination_test.cpp  helpers.hpp  precompute_literals_test.cpp  synergy_test.cpp  treeshake_test.cpp
tests/parse/: comment_test.cpp  error_test.cpp  expr_anon_func_test.cpp  expr_binary_test.cpp  expr_call_test.cpp  expr_comma_test.cpp  expr_condtional_test.cpp  expr_field_test.cpp  expr_group_test.cpp  expr_index_test.cpp  expr_intrinsic_test.cpp  expr_is_test.cpp  expr_misc_test.cpp  expr_paren_test.cpp  expr_primary_test.cpp  expr_switch_test.cpp  expr_unary_test.cpp  helpers.hpp  iterator_test.cpp  operators_test.cpp  stmt_enum_decl_test.cpp  stmt_exec_test.cpp  stmt_func_decl_test.cpp  stmt_import_test.cpp  stmt_print_test.cpp  stmt_struct_decl_test.cpp  stmt_union_decl_test.cpp
tests/prog/: copy_test.cpp
tests/vm/: atomic_op_test.cpp  call_test.cpp  consts_test.cpp  conv_test.cpp  error_test.cpp  float_check_test.cpp  float_op_test.cpp  fork_test.cpp  helpers.hpp  int_check_test.cpp  int_op_test.cpp  io_process_test.cpp  io_tcp_test.cpp  io_test.cpp  ip_check_test.cpp  jump_test.cpp  literal_test.cpp  long_check_test.cpp  long_op_test.cpp  misc_pcall_test.cpp  misc_test.cpp  string_check_test.cpp  string_op_test.cpp  struct_op_test.cpp
(+761 files in other folders)
